--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Editing "<%= @post.title %>"</h2>
 <%= form_tag post_path(@post), method: "patch" do %>
-  <div class="field">
+  <div class="field<%= ' field_with_errors' if @post.errors[:name].any? %>">
     <%= label_tag "title", "Title" %>
     <%= text_field_tag "title", @post.title %>
   </div>
@@ -22,4 +22,3 @@
   </div>
   <%= submit_tag "Update" %>
 <% end %>
-
