--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <div class="field">
+  <div class="field<%= ' field_with_errors' if @post.errors[:name].any? %>">
     <%= label_tag "content", "Content" %>
     <br />
     <%= text_area_tag "content", @post.content %>
